# adeline-os

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  entry.S  hifive-unmatched-a00.dts  hifive.dtb  hifive.dts  linker.ld  opensbi.dts  qemu-virt-32.dts  riscv64-virt.dtb  trap_entry.S
.cargo/: config  config.toml
src/: asm.rs  basic_allocator.rs  basic_consts.rs  console.rs  dev_tree.rs  hwinfo.rs  io.rs  linker_info.rs  main.rs  pagetable.rs  panic.rs  prelude.rs  thread.rs  time.rs  traits.rs  trap.rs  uart.rs  util.rs
src/console/: mod.rs  uart_ns16550a.rs
src/isr/: mod.rs  plic.rs
src/pagetable/: memory_map.rs  mod.rs  regions.rs  sv48.rs
src/sbi/: base.rs  call.rs  hart.rs  ipi.rs  mod.rs  reset.rs  rfence.rs  timer.rs
src/task/: console.rs  mod.rs  simple_executor.rs
src/time/: mod.rs  rtc.rs
