[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = "0.7"
volatile = "0.4.4"
smallvec = "1.8"
cfg-if = "1"
uart_16550 = "0.2"

[dependencies.linked_list_allocator]
version = "0.9"

[dependencies.spin]
version = "0.9"
default-features = false
features = ["lock_api", "mutex", "spin_mutex"]

[dependencies.fdt-rs]
version = "0.4"
default-features = false

[dependencies.indenter]
version = "0.3"
default-features = false

[dependencies.conquer-once]
version = "0.3"
default-features = false

[dependencies.snafu]
version = "0.7"
default-features = false

[dependencies.derive_builder]
version = "0.11"
default-features = false

[dependencies.anyhow]
version = "1"
default-features = false